Minor bug fixes (#15)
* Fix too fast bubble color transistions

* Add mail to contact bubble

* Fix Team member config

* Fix Overflowing roles

* Fix mistakes

--- a/src/pages/team/teamDetail/style.css
+++ b/src/pages/team/teamDetail/style.css
@@ -72,3 +72,9 @@
   font-weight: 700;
   z-index: 10;
 }
+
+.teamDetailContainer h2,
+.teamDetailContainer h3,
+.teamDetailContainer p {
+  color: var(--beige);
+}
